--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,6 +29,8 @@
     <!-- Page plugins -->
     <link rel="stylesheet" href="./assets/vendor/select2/dist/css/select2.min.css">
     <link rel="stylesheet" href="./assets/vendor/quill/dist/quill.core.css">
+    <link rel="stylesheet" href="./assets/vendor/animate.css/animate.min.css">
+    <link rel="stylesheet" href="./assets/vendor/sweetalert2/dist/sweetalert2.min.css">
     <!-- Argon CSS -->
     <link rel="stylesheet" href="./assets/css/argon.css?v=1.1.0" type="text/css">
   </head>
@@ -105,13 +107,13 @@
                             <div class="col">
                               <div class="form-group">
                                 <label class="form-control-label ">Start date</label>
-                                <input class="form-control" placeholder="Start date" type="text" >
+                                <input class="form-control" placeholder="Start date" type="text" id='startDate' value = '05/16/2021'>
                               </div>
                             </div>
                             <div class="col">
                               <div class="form-group">
                                 <label class="form-control-label">End date</label>
-                                <input class="form-control" placeholder="End date" type="text" >
+                                <input class="form-control" placeholder="End date" type="text" id ='endDate'value = '05/18/2021'>
                               </div>
                             </div>
                           </div>
@@ -136,7 +138,7 @@
                             <div class ='col'>
                               <div class='form-group'>
                                 <div class="mt-5">
-                                  <a href="#" class="btn btn-default my-2">Try it now</a>
+                                  <a href="#" class="btn btn-default my-2" id='btn'>Try it now</a>
                                 </div>
                               </div>
                             </div>
@@ -212,8 +214,11 @@
     <script src="./assets/vendor/quill/dist/quill.min.js"></script>
     <script src="./assets/vendor/dropzone/dist/min/dropzone.min.js"></script>
     <script src="./assets/vendor/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js"></script>
+    <script src="./assets/vendor/sweetalert2/dist/sweetalert2.min.js"></script>
+    <script src="./assets/vendor/bootstrap-notify/bootstrap-notify.min.js"></script>
     <!-- Argon JS -->
     <script src="./assets/js/argon.js?v=1.1.0"></script>
+    <script src="./assets/js/validate.js"></script>
     <!-- Demo JS - remove this in your project -->
     <script src="./assets/js/demo.min.js"></script>
   </body>
