--- a/frontend/index.html
+++ b/frontend/index.html
@@ -165,7 +165,8 @@
           <div class="col-md-6">
             <h2 class="display-3 text-white">About the project</h3>
               <p class="lead text-white">
-                Project use Machine learning blah blah, LTSM to give best result, bla bla
+                Stock Price Prediction Using Machine Learning
+                BEST MOVE PREDICTION FOR INVESTORS
               </p>
           </div>
         </div>
