--- a/frontend/index.html
+++ b/frontend/index.html
@@ -165,7 +165,7 @@
           <div class="col-md-6">
             <h2 class="display-3 text-white">About the project</h3>
               <p class="lead text-white">
-                Stock Price Prediction Using Machine Learning
+                Stock Price Prediction Using Machine Learning<br>
                 BEST MOVE PREDICTION FOR INVESTORS
               </p>
           </div>
