--- a/frontend/index.html
+++ b/frontend/index.html
@@ -86,7 +86,7 @@
                 <div class="pr-5">
                   <h1 class="display-2 text-white font-weight-bold mb-0">STOCK PREDICTION PROJECT</h1>
                   <h2 class="display-4 text-white font-weight-light">Project nhóm 1</h2>
-                  <p class="text-white mt-4">Enter start and end date within five days. Select Ticker from our list to get started</p>
+                  <p class="text-white mt-4">Enter start and end date within five days. Select Ticket from our list to get started</p>
                 </div>
               </div>
               <div class="col">
@@ -121,7 +121,7 @@
                           <div class="row">
                             <div class="col">
                               <div class="form-group">
-                                <label class="form-control-label">Ticker</label>
+                                <label class="form-control-label">Ticket</label>
                                 <select class="form-control" data-toggle="select">
                                   <option>Alerts</option>
                                   <option>Badges</option>
