--- a/frontend/result.html
+++ b/frontend/result.html
@@ -86,7 +86,7 @@
                 <div class="pr-5">
                   <h1 class="display-2 text-white font-weight-bold mb-0">STOCK PREDICTION RESULT</h1>
                   <h2 class="display-4 text-white font-weight-light">This is our prediction for the given stock</h2>
-                  <!-- <p class="text-white mt-4">Enter start and end date within five days. Select Ticker from our list to get started</p> -->
+                  <!-- <p class="text-white mt-4">Enter start and end date within five days. Select Ticket from our list to get started</p> -->
                 </div>
               </div>
             </div>
