--- a/frontend/result.html
+++ b/frontend/result.html
@@ -151,7 +151,7 @@
                       <div class="row">
                         <div class="col">
                           <div class="form-group">
-                            <label class="form-control-label">Ticker</label>
+                            <label class="form-control-label">Ticket</label>
                             <select class="form-control" data-toggle="select">
                               <option>Alerts</option>
                               <option>Badges</option>
