--- a/frontend/result.html
+++ b/frontend/result.html
@@ -113,7 +113,7 @@
       <section class="py-6 pb-9 bg-default">
         <div class="row justify-content-center text-center">
           <div class="col-md-6">
-            <h2 class="display-3 text-white">Enter the date and chose ticket</h3>
+            <h2 class="display-3 text-white">Enter the date and choose ticket</h3>
               <p class="lead text-white">
                 Date range must not be greater than five 
               </p>
