--- a/frontend/index.html
+++ b/frontend/index.html
@@ -85,7 +85,7 @@
               <div class="col">
                 <div class="pr-5">
                   <h1 class="display-2 text-white font-weight-bold mb-0">STOCK PREDICTION PROJECT</h1>
-                  <h2 class="display-4 text-white font-weight-light">Project nhóm 1</h2>
+                  <h2 class="display-4 text-white font-weight-light">Project nhóm 4</h2>
                   <p class="text-white mt-4">Enter start and end date within five days. Select Ticket from our list to get started</p>
                 </div>
               </div>
@@ -122,7 +122,7 @@
                             <div class="col">
                               <div class="form-group">
                                 <label class="form-control-label">Ticket</label>
-                                <select class="form-control" data-toggle="select">
+                                <select class="form-control" data-toggle="select" id="stock">
                                   <option>Alerts</option>
                                   <option>Badges</option>
                                   <option>Buttons</option>
