--- a/frontend/result.html
+++ b/frontend/result.html
@@ -86,7 +86,7 @@
                 <div class="pr-5">
                   <h1 class="display-2 text-white font-weight-bold mb-0">STOCK PREDICTION RESULT</h1>
                   <h2 class="display-4 text-white font-weight-light">This is our prediction for the given stock</h2>
-                  <!-- <p class="text-white mt-4">Enter start and end date within five days. Select Ticket from our list to get started</p> -->
+                  <p class="text-white mt-4" id='stockName'></p>
                 </div>
               </div>
             </div>
@@ -173,7 +173,7 @@
                         <div class="col">
                           <div class="form-group">
                             <label class="form-control-label">Ticket</label>
-                            <select class="form-control" data-toggle="select">
+                            <select class="form-control" data-toggle="select" id="stock">
                               <option>Alerts</option>
                               <option>Badges</option>
                               <option>Buttons</option>
