--- a/frontend/result.html
+++ b/frontend/result.html
@@ -134,7 +134,7 @@
       <section class="py-6 pb-9 bg-default">
         <div class="row justify-content-center text-center">
           <div class="col-md-6">
-            <h2 class="display-3 text-white">Enter the date and choose ticket</h3>
+            <h2 class="display-3 text-white">Enter the date and choose ticker</h3>
               <p class="lead text-white">
                 Date range must not be greater than five 
               </p>
@@ -152,7 +152,7 @@
                     <h3 class="mb-0">Analytics on demand</h3>
                   </div>
                   <div class="card-body">
-                    <form>
+                    <form id="stockInput">
                     
                       <div class="row input-daterange datepicker align-items-center">
                         <div class="col">
@@ -174,12 +174,37 @@
                           <div class="form-group">
                             <label class="form-control-label">Ticket</label>
                             <select class="form-control" data-toggle="select" id="stock">
-                              <option>Alerts</option>
-                              <option>Badges</option>
-                              <option>Buttons</option>
-                              <option>Cards</option>
-                              <option>Forms</option>
-                              <option>Modals</option>
+                              <option value="GOOG">GOOG</option>
+                                  <option value="FSLY">FSLY</option>
+                                  <option value="TBIO">TBIO</option>
+                                  <option value="INO">INO</option>
+                                  <option value="AAPL">AAPL</option>
+                                  <option value="CBL">CBL</option>
+                                  <option value="PLUG">PLUG</option>
+                                  <option value="MSFT">MSFT</option>
+                                  <option value="BRN">BRN</option>
+                                  <option value="LK">LK</option>
+                                  <option value="FFHL">FFHL</option>
+                                  <option value="LLEX">LLEX</option>
+                                  <option value="SPR">SPR</option>
+                                  <option value="WKHS">WKHS</option>
+                                  <option value="SNY">SNY</option>
+                                  <option value="KIRK">KIRK</option>
+                                  <option value="SONO">SONO</option>
+                                  <option value="SNSS">SNSS</option>
+                                  <option value="FRSX">FRSX</option>
+                                  <option value="PTN">PTN</option>
+                                  <option value="DLOC">DLOC</option>
+                                  <option value="NNDM">NNDM</option>
+                                  <option value="PENN">PENN</option>
+                                  <option value="HEPA">HEPA</option>
+                                  <option value="BOX">BOX</option>
+                                  <option value="SNYNF">SNYNF</option>
+                                  <option value="MARA">MARA</option>
+                                  <option value="STIM">STIM</option>
+                                  <option value="APYX">APYX</option>
+                                  <option value="CRSP">CRSP</option>
+                                  <option value="CJJD">CJJD</option>
                             </select>
                           </div>
                         </div>
@@ -188,7 +213,7 @@
                         <div class ='col'>
                           <div class='form-group'>
                             <div class="mt-5">
-                              <btn class="btn btn-default my-2" id='btn'>Try it now</btn>
+                              <button type = "submit" class="btn btn-default my-2" id='btn'>Try it now</button>
                             </div>
                           </div>
                         </div>
