added navbar all

--- a/frontend/stock-details.html
+++ b/frontend/stock-details.html
@@ -68,16 +68,16 @@
               <a href="index.html" class="nav-link">
                 <span class="nav-link-inner--text">Stock Prediction</span>
               </a>
-             <li class="nav-item">
-              <a href="stock-details.html" class="nav-link">
-                <span class="nav-link-inner--text">Stock Detail</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="http://localhost:5500/frontend/stock-news.html" class="nav-link">
-                <span class="nav-link-inner--text">Stock News</span>
-              </a>
-            </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link" data-toggle="modal" data-target="#select-stock-1" >
+                  <span class="nav-link-inner--text">Stock Detail</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link" data-toggle="modal" data-target="#select-stock-2" >
+                  <span class="nav-link-inner--text">Stock News</span>
+                </a>
+              </li>
           </ul>
            <ul class="navbar-nav align-items-lg-center ml-lg-auto">
 
